--- a/Prode.Web/Prode.Web.csproj
+++ b/Prode.Web/Prode.Web.csproj
@@ -88,17 +88,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="client\home\index.html" />
+    <Content Include="client\home\index.jsx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\libs\angular.js" />
-    <Content Include="Scripts\app\app.js" />
-    <Content Include="Scripts\libs\jquery.js" />
-    <Content Include="Scripts\libs\r.js" />
-    <Content Include="Scripts\libs\require.js" />
     <Content Include="package.json" />
+    <Content Include="webpack.config.js" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
-    <None Include="Scripts\_references.js" />
-    <Content Include="Scripts\app\require-config.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -111,7 +107,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
@@ -123,8 +121,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="client\" />
+    <Folder Include="bundle\" />
     <Folder Include="Models\" />
+    <Folder Include="Scripts\app\" />
+    <Folder Include="Scripts\libs\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
