--- a/Prode.Web/package.json
+++ b/Prode.Web/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "prode.web",
+  "name": "prode",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
+  },
+  "babel": {
+    "presets": ["env", "react"]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.6.4",
-    "bootstrap": "^3.3.7",
-    "jquery": "^2.2.4"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "webpack": "^3.0.0"
   }
 }
