Se agrego equipos y encuentro, se actualizo el webpack.config.js, y se dinamizó el llamado a los componentes react

--- a/Prode.Web/Prode.Web.csproj
+++ b/Prode.Web/Prode.Web.csproj
@@ -88,9 +88,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="client\home\index.html" />
+    <Content Include="client\encuentro\index.jsx" />
+    <Content Include="client\equipo\index.jsx" />
     <Content Include="client\home\index.jsx" />
-    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="package.json" />
     <Content Include="webpack.config.js" />
@@ -103,6 +103,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ReactComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -122,7 +123,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="bundle\" />
-    <Folder Include="Models\" />
     <Folder Include="Scripts\app\" />
     <Folder Include="Scripts\libs\" />
   </ItemGroup>
