--- a/Prode.Web/package.json
+++ b/Prode.Web/package.json
@@ -5,17 +5,17 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --config webpack.config.js"
   },
   "babel": {
-    "presets": ["env", "react"]
+    "presets": [ "react", "es2015" ]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
