--- a/Prode.Web/package.json
+++ b/Prode.Web/package.json
@@ -1,24 +1,16 @@
 {
-  "name": "prode",
+  "name": "prode.web",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "build": "webpack --config webpack.config.js"
-  },
-  "babel": {
-    "presets": [ "react", "es2015" ]
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "webpack": "^3.0.0"
+    "angular": "^1.6.4",
+    "bootstrap": "^3.3.7",
+    "jquery": "^2.2.4"
   }
 }
