--- a/Prode.Web/package.json
+++ b/Prode.Web/package.json
@@ -8,7 +8,10 @@
     "build": "webpack --config webpack.config.js"
   },
   "babel": {
-    "presets": [ "react", "es2015" ]
+    "presets": [
+      "react",
+      "es2015"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +20,8 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^3.3.7",
+    "flux": "^3.1.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.0.0"
