--- a/Prode.Web/Prode.Web.csproj
+++ b/Prode.Web/Prode.Web.csproj
@@ -92,9 +92,10 @@
     <Content Include="client\equipo\actions\equipoActions.js" />
     <Content Include="client\equipo\components\equipo.jsx" />
     <Content Include="client\equipo\constants\equipoConstants.js" />
-    <Content Include="client\dispatcher\appDispatcher.js" />
+    <Content Include="client\dispatcher.js" />
     <Content Include="client\equipo\stores\equipoStore.js" />
     <Content Include="client\home\components\home.jsx" />
+    <Content Include="client\utils\utils.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Global.asax" />
     <Content Include="package.json" />
