--- a/Prode.Web/package.json
+++ b/Prode.Web/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack -d --watch --color"
   },
   "babel": {
     "presets": [
