--- a/Prode.Web/package.json
+++ b/Prode.Web/package.json
@@ -2,7 +2,7 @@
   "name": "prode",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "devDependencies": {},
   "scripts": {
     "build": "webpack -d --watch --color"
