--- a/Prode.Web/Prode.Web.csproj
+++ b/Prode.Web/Prode.Web.csproj
@@ -100,6 +100,7 @@
     <Content Include="client\home\components\home.jsx" />
     <Content Include="client\common\utils.js" />
     <Content Include="Content\bootstrap.css" />
+    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="package.json" />
     <Content Include="webpack.config.js" />
