--- a/Prode.Api/Prode.Api.csproj
+++ b/Prode.Api/Prode.Api.csproj
@@ -114,6 +114,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\EncuentrosController.cs" />
     <Compile Include="Controllers\EquiposController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
